tests/baselines/reference/derivedClassOverridesPrivateFunction1.errors.txt
tests/cases/compiler/derivedClassOverridesPrivateFunction1.ts(8,7): error TS2416: Class 'DerivedClass' incorrectly extends base class 'BaseClass':
  Private property '_init' cannot be reimplemented.


==== tests/cases/compiler/derivedClassOverridesPrivateFunction1.ts (1 errors) ====
    class BaseClass {
        constructor() {
            this._init();
        }
        private _init() {
        }
    }
    class DerivedClass extends BaseClass {
          ~~~~~~~~~~~~
!!! error TS2416: Class 'DerivedClass' incorrectly extends base class 'BaseClass':
!!! error TS2416:   Private property '_init' cannot be reimplemented.
        constructor() {
            super();
        }
        private _init() {
        }
    }
    new DerivedClass();